--- a/dialog.ui
+++ b/dialog.ui
@@ -1242,7 +1242,7 @@
              <layout class="QGridLayout" name="gridLayout_21">
               <item row="0" column="0">
                <widget class="QStackedWidget" name="stackedWidget_2">
-                <widget class="QWidget" name="stackedWidget_2Page1" native="true">
+                <widget class="QWidget" name="stackedWidget_2Page1">
                  <layout class="QGridLayout" name="gridLayout_9" columnstretch="1,2,1,2">
                   <item row="0" column="0">
                    <widget class="QLabel" name="label_47">
@@ -1330,7 +1330,7 @@
                   </item>
                  </layout>
                 </widget>
-                <widget class="QWidget" name="stackedWidget_2Page2" native="true">
+                <widget class="QWidget" name="stackedWidget_2Page2">
                  <layout class="QGridLayout" name="gridLayout_10" columnstretch="1,2,1,2">
                   <item row="0" column="0">
                    <widget class="QLabel" name="label_59">
