--- a/sytle.qss
+++ b/sytle.qss
@@ -6,6 +6,9 @@ QPushButton {
     border: 1px solid black;
     border-radius: 4px;
 }
+QPushButton:pressed {
+    background-color: blue;
+}
 QComboBox {
     font: 20px;
 }
