--- a/dialog.ui
+++ b/dialog.ui
@@ -243,7 +243,7 @@
       <string notr="true"/>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="manPage">
       <property name="enabled">
@@ -2069,6 +2069,9 @@
                  </property>
                  <property name="text">
                   <string>D2</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                  </property>
                 </widget>
                </item>
